<resources>
    <string name="app_name">ChatsApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_to_signup">Not registered yet? Register here</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="signup_to_login">Already Registered? Login Here.</string>
    <string name="tushaar">Tushaar</string>
</resources>